# myrkr

./: .gitignore  .gitmodules  .travis.yml  README.md  pyproject.toml  setup.py
myrkr/: .gitignore  ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  materials.py  stylesheet.ily  tools.py
myrkr/builds/: .gitignore
myrkr/builds/_segments/: -.ly  A.ly  B.ly  C.ly  D.ly  E.ly  F.ly  G.ly  H.ly  I.ly  J.ly  K.ly  L.ly  M.ly  N.ly  segment-02.ly  segment-03.ly  segment-05.ly  segment-06.ly  segment-08.ly  segment-09.ly  segment-C.ly  segment-F.ly  segment-J.ly  segment-L.ly  segment-M.ly  segment-N.ly
myrkr/builds/a4-score/: .01.ily.tags  .03.ily.tags  .07.ily.tags  .10.ily.tags  .12.ily.tags  .13.ily.tags  .14.ily.tags  (+8 more)
myrkr/docs/: Makefile  make.bat
myrkr/etc/: materials.txt
myrkr/makers/: ColorMaker.py  MusicMaker.py  Preprocessor.py  RhythmMaker.py  RhythmPreprocessor.py  ScoreTemplate.py  SegmentMaker.py
myrkr/materials/: __abbreviations__.py  __init__.py  __metadata__.py  __views__.py
myrkr/sections/: stylesheet.ily
myrkr/segments/: __metadata__.py  __views__.py
myrkr/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  stylesheet.ily
myrkr/test/: illustrate_segments.py  test_materials.py  test_myrkr_materials.py  test_myrkr_segments.py  test_segments.py
myrkr/tools/: ColorMaker.py  MusicMaker.py  Preprocessor.py  RhythmMaker.py  ScoreTemplate.py  SegmentMaker.py  __init__.py  color_fingerings.py  final_markup.py  make_color_fingerings.py
source/myrkr/: library.py  stylesheet.ily
(+847 files in other folders)
