[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrkr"
version = "3.21"
description = "Myrkr (2015) for bass clarinet"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = [
    "abjad>=3.21",
    "black",
    "flake8",
    "isort",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/trevorbaca/myrkr"

[tool.setuptools]
packages = ["myrkr"]
package-dir = { "" = "source" }
